crates/am/tests/snapshots/snapshots__snapshot_display_deep_chain.snap
---
source: crates/am/tests/snapshots.rs
expression: output
---
○ base
│ ll → ls -lha
│
╰─○ git
  │ gs → git status
  │
  ╰─● rust (active)
      ct → cargo test
