crates/am/tests/snapshots/snapshots__snapshot_display_inheritance_tree.snap
---
source: crates/am/tests/snapshots.rs
expression: output
---
○ default
  (no aliases)

○ git
│ cm → git commit -sm
│ gs → git status
│
╰─● git-conventional (active)
    cmf → cm feat: {{@}}
