crates/am/tests/snapshots/snapshots__snapshot_display_listing_with_globals_and_project.snap
---
source: crates/am/tests/snapshots.rs
expression: output
---
global
  ll → ls -lha

● rust (active)
  ct → cargo test

📁 project aliases (.aliases)
  b → make build
