crates/am/tests/snapshots/snapshots__snapshot_display_multi_active.snap
---
source: crates/am/tests/snapshots.rs
expression: output
---
● base (active: 1)
  ll → ls -lha

● rust (active: 2)
  ct → cargo test

○ git
  gs → git status
