crates/am/tests/snapshots/snapshots__snapshot_display_profile_list.snap
---
source: crates/am/tests/snapshots.rs
expression: output
---
● git-conventional (active: 1)
  cmf → cm feat: {{@}}

○ default
  (no aliases)

○ git
  cm → git commit -sm
  gs → git status
