crates/am/tests/snapshots/snapshots__snapshot_export_all.snap
---
source: crates/am/tests/snapshots.rs
expression: output
---
[meta]
version = 2

[global.aliases]
ll = "ls -lha"

[[profiles]]
name = "git"

[profiles.aliases]
gs = "git status"

[local.aliases]
t = "cargo test"
