crates/am/tests/snapshots/snapshots__snapshot_export_single_profile.snap
---
source: crates/am/tests/snapshots.rs
expression: output
---
[[profiles]]
name = "git"

[profiles.aliases]
cm = "git commit -sm"
gs = "git status"
