crates/am/tests/snapshots/snapshots__snapshot_hook_bash_with_aliases.snap
---
source: crates/am/tests/snapshots.rs
expression: output
---
b() { cargo build "$@"; }
t() { cargo test "$@"; }
export _AM_PROJECT_ALIASES="b,t"
