crates/am/tests/snapshots/snapshots__snapshot_hook_fish_leaving_project.snap
---
source: crates/am/tests/snapshots.rs
expression: output
---
functions -e old_a
functions -e old_b
echo 'am: unloaded .aliases: old_a, old_b'
set -e _AM_PROJECT_ALIASES
