crates/am/tests/snapshots/snapshots__snapshot_hook_fish_transition.snap
---
source: crates/am/tests/snapshots.rs
expression: output
---
functions -e old_a
functions -e old_b
alias t "make test"
set -gx _AM_PROJECT_ALIASES "t"
