crates/am/tests/snapshots/snapshots__snapshot_hook_powershell_with_aliases.snap
---
source: crates/am/tests/snapshots.rs
expression: output
---
function b { cargo build @args }
function t { cargo test @args }
$env:_AM_PROJECT_ALIASES = "b,t"
